# check-in-app/src/generated/openapi.json
@@ -1031,6 +1031,10 @@
             "type": "string",
             "minLength": 1,
             "maxLength": 500
+          },
+          "workAreaId": {
+            "type": "string",
+            "format": "uuid"
           }
         }
       },
